# channel47

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LINKS.md  README.md  REDESIGN_IMPLEMENTATION_PROMPT.md  STRATEGY.md.md  TESTING-NOTES.md  astro.config.mjs  channel47-brand-voice.md  package-lock.json  package.json  tailwind.config.mjs  vercel.json
.astro/: settings.json
.astro/astro/: content.d.ts
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/workflows/: publish-nano-banana-mcp.yml  synthesize.yml
docs/: ARCHITECTURE.md  CHECKPOINT-2025-12-20.md  COMPLIANCE.md  channel47-style-guide.md  design-system.md  homepage-redesign-notes.md  menerals-analysis-notes.md
docs/content-planning/: README.md  brand-voice.md  calendar.md  distribution.md  (+1 more)
logs/: 2025-12-19-channel47-implementation.md  2025-12-19-prompt-enhancer-skill-creation.md  2025-12-19-test-synthesis.md  2025-12-20-github-actions-secrets-setup.md  2025-12-20-workflow-permissions-fix.md  2025-12-20-workflow-testing.md  2025-12-22_branded-search-campaigns-transcript.md  2025-12-22_branded-search-campaigns.md  conversation_2025-12-21_14-59-44.md
plugins/designer/: CHANGELOG.md  GETTING_STARTED.md  README.md  pyproject.toml
plugins/designer/.claude-plugin/: plugin.json
plugins/designer/agents/image-creator/: agent.md
plugins/designer/commands/: setup.md
plugins/designer/skills/image-gen/: SKILL.md
plugins/designer/tests/: __init__.py  test_utils.py
scripts/: regenerate-images.ts  sync-marketplace.ts  synthesize.ts
site/: astro.config.mjs
(+387 files in other folders)
