[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "channel47-designer"
version = "1.3.0"
description = "AI-powered image generation MCP server using Google Gemini"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jackson", email = "jackson@channel47.dev" }
]
keywords = ["mcp", "gemini", "image-generation", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.23.0,<2.0.0",
    "fastmcp>=2.14.0,<3.0.0",
    "httpx>=0.27.1,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://channel47.dev"
Repository = "https://github.com/channel47/channel47"

[project.scripts]
channel47-designer = "src.nanobanana_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
